[gd_scene load_steps=7 format=3 uid="uid://da3qela353ehd"]

[ext_resource type="Texture2D" uid="uid://duc5o82hkqruy" path="res://assets/square-16.png" id="1_gi6sr"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_pvyw6"]
[ext_resource type="AudioStream" uid="uid://kc71cxxr5oj8" path="res://assets/sfx/enemy-gun.mp3" id="3_t2hbo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cxue7"]
size = Vector2(24, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_kyaka"]
radius = 154.159

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yy6kt"]
size = Vector2(25, 25)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_pvyw6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_cxue7")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.984671, 0.457762, 0.428539, 1)
texture_filter = 1
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_gi6sr")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_kyaka")

[node name="DamageDetector" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageDetector"]
shape = SubResource("RectangleShape2D_yy6kt")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="EnemyShootSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_t2hbo")

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
[connection signal="body_entered" from="DamageDetector" to="." method="_on_damage_detector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
